<resources>
    <string name="amigo_time_picker_dialog_title">Set time</string>
    <string name="amigo_date_picker_dialog_title">Set date</string>
    <string name="amigo_date_time_done">Done</string>
    <string name="amigo_copy">copy</string>
    <string name="amigo_paste">paste</string>
    <string name="amigo_cut">cut</string>
    <string name="amigo_selectAll">select all</string>
    <string name="amigo_select">select</string>
    <string name="amigo_inputMethod">inputmethod</string>
    <string name="amigo_action_bar_up_description">Navigate up</string>
    <string name="amigo_action_bar_home_description">Navigate home</string>
    <string name="amigo_smart_full_btn_label">OK</string>
    <string name="amigo_capital_on">ON</string>
    <string name="amigo_capital_off">OFF</string>
    <string name="amigo_cancel">Cancel</string>
    <string name="amigo_edit_mode_rightbtn_txt">ok</string>
    <string name="amigo_edit_mode_leftbtn_txt">cancel</string>
    <string name="amigo_strong_warning">strong warning</string>
    <string name="amigo_action_mode_done">Done</string>
    <string name="amigo_activity_resolver_use_always">Always</string>
    <string name="amigo_activity_resolver_use_once">Just once</string>
    <string name="amigo_back_button_label">Back</string>
    <string name="amigo_chooseActivity">Choose an action</string>
    <string name="amigo_next_button_label">Next</string>
    <string name="amigo_no">Cancel</string>
    <string name="amigo_noApplications">No apps can perform this action.</string>
    <string name="amigo_ok">OK</string>
    <string name="amigo_skip_button_label">Skip</string>
    <string name="amigo_system_label">Android System</string>
    <string name="amigo_whichApplication">Complete action using</string>
    <string name="amigo_yes">OK</string>
    <string name="amigo_app_name">AmigoUI</string>
    <string name="about_us">About us</string>
    <string name="aboutus_copyright_content_text">Copyright©2015 Shenzhen Gionee communication equipment Co., Ltd. all rights reserved</string>
    <string name="aboutus_note_content_text">Note</string>
    <string name="aboutus_title">About us</string>
    <string name="aboutus_version_content_text">Version:V</string>
    <string name="add_image_fail">Add pictures failed</string>
    <string name="ai_activity_not_network_tip">The current network is disconnected, but also the network search</string>
    <string name="ai_activity_title">AI</string>
    <string name="ai_setting_name">Ami little helper</string>
    <string name="ai_setting_tip">Remember at the same time intelligent search</string>
    <string name="alert_time_early">Time before now, please reinstall</string>
    <string name="alert_user_cancle">Exit</string>
    <string name="alert_user_ok">Continue</string>
    <string name="alert_user_title_str">System Prompt</string>
    <string name="ami_recommend_panel_title">Ami Recommend</string>
    <string name="amigo_actionbar_magic_item_close">Close</string>
    <string name="amigo_actionbar_magic_item_more">More</string>
    <string name="amigo_confirm_dialog_st_cancel">Cancel</string>
    <string name="amigo_confirm_dialog_st_ok">Ok</string>
    <string name="amigo_determinate_progress_dialog_st_cancel">Cancel</string>
    <string name="amigo_multichoice_cancel_select_all">cancel select</string>
    <string name="amigo_multichoice_select_all">select all</string>
    <string name="amigo_multichoice_select_text">selected %1$s item</string>
    <string name="app_name">Notes</string>
    <string name="app_name_outside">Notes</string>
    <string name="app_widget2x2">Note2x2</string>
    <string name="app_widget4x4">Note4x4</string>
    <string name="attachment_enter_camera_fail">No camera</string>
    <string name="attachment_record_hint">Current recording equipment is not available, please checkout it.</string>
    <string name="attachment_record_permission_hint">Please check the permission of sound record granted</string>
    <string name="attachment_selector_select_gallery">Gallery</string>
    <string name="attachment_selector_select_image">Select picture</string>
    <string name="attachment_selector_sound_recorder">Record sound</string>
    <string name="attachment_selector_take_photos">Take photos</string>
    <string name="authorization_failed">Can\'t get permission to use this feature</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_sure">Ok</string>
    <string name="content_hint">Input content</string>
    <string name="create_picture">Creating picture...</string>
    <string name="create_picture_create_bmp_fail">Content is too long, the system generates a picture of failure</string>
    <string name="create_picture_fail">Generate picture failure</string>
    <string name="create_picture_fail_no_space">Pro, do not have enough storage space to generate a picture</string>
    <string name="data_flow_alert_user_checkbox">The next is no longer remind</string>
    <string name="data_flow_alert_user_content">\nWelcome to the calendar.\nTo ensure that the function of normal use,there will be as follows:\nWLAN or mobile data connection via a network.\nWhether to continue to use?</string>
    <string name="date_upgrade_message">Is updating the Notepad data, please wait a moment</string>
    <string name="default_label_inspiration">Inspiration</string>
    <string name="default_label_life">Life</string>
    <string name="default_label_meeting">Meeting</string>
    <string name="default_label_travel">Travel</string>
    <string name="dialog_install">Install</string>
    <string name="dialog_install_or_not">Install or not</string>
    <string name="dialog_negative_text">Dismiss</string>
    <string name="dialog_positive_text">OK</string>
    <string name="dialog_update">Update</string>
    <string name="dialog_update_compelete">Upgrade! Detected the latest versionV</string>
    <string name="dialog_update_or_not">,\n\nIs now updated?</string>
    <string name="down_load_dialog_msg">Downloading</string>
    <string name="down_load_dialog_title">DownLoad</string>
    <string name="download_compelete">Download complete</string>
    <string name="download_poto_hint">Download picture to：</string>
    <string name="download_unsurpport_hint">Unsurpport type</string>
    <string name="favor_recommend_panel_title">Favor Recommend</string>
    <string name="fb_answer_format">A:</string>
    <string name="fb_del_attach_dialog_message">Do you want to delete the attachment?</string>
    <string name="fb_del_attach_dialog_title">Delete attachments</string>
    <string name="fb_fb_string_message_network_exception">Network exception, check the network</string>
    <string name="fb_feedback_record_activity_title">My Feedback</string>
    <string name="fb_new_feedback">I want feedback</string>
    <string name="fb_new_feedback_activity_title">New Feedback</string>
    <string name="fb_new_feedback_tip">* Please enter your contact information so that we can help you solve the problem more quickly</string>
    <string name="fb_problem_format">Q:</string>
    <string name="fb_reply_person">Official service personnel</string>
    <string name="fb_some_attach_toast_message">The accessory already exists</string>
    <string name="file_not_found">file not found</string>
    <string name="file_note_found">File not found</string>
    <string name="file_save_fail_origin_no_exist">Pro, the original file is missing, can not save the picture</string>
    <string name="file_save_fail_toast_text">Pro, there is not enough space to save</string>
    <string name="file_save_toast_text">image saves to </string>
    <string name="gn_fb_string_attach_count">Figure(%d)</string>
    <string name="gn_fb_string_attach_max_length">The feedback is not more than 25M, please re select the drawings</string>
    <string name="gn_fb_string_attach_text">Add photos</string>
    <string name="gn_fb_string_contact_beyond_max">Contacts should not exceed 40 words!</string>
    <string name="gn_fb_string_contact_hint">Send QQ, telephone or mail</string>
    <string name="gn_fb_string_format">yyyy.MM.dd HH:mm</string>
    <string name="gn_fb_string_message_beyond_max">Feedback should not exceed 800 words!</string>
    <string name="gn_fb_string_message_hint">Your opinion is our greatest power forward, thank you!</string>
    <string name="gn_fb_string_message_network_disconnected">Network link is broken</string>
    <string name="gn_fb_string_message_not_null">Message can not be empty</string>
    <string name="gn_fb_string_notification_content">Your feedback has been reply, click on View</string>
    <string name="gn_fb_string_recordempty">Feedback record is empty</string>
    <string name="gn_fb_string_send">Send</string>
    <string name="gn_fb_string_send_failed">ReSend</string>
    <string name="gn_fb_string_send_success">Send success!</string>
    <string name="gn_fb_string_sending">Sending</string>
    <string name="import_backup_config_dialog_btn_cancel">Cancel</string>
    <string name="import_backup_config_dialog_btn_import">Import</string>
    <string name="import_backup_config_dialog_checkbox_text">No longer tips</string>
    <string name="import_backup_config_dialog_message">This version of the new design, the local backup function is no longer support, Detected that you have a backup of the data is not imported, please timely introduction of the backup data, so as not to lose.</string>
    <string name="import_backup_config_dialog_title">Notepad import</string>
    <string name="import_backup_fail_message">The import process encountered a problem, please check whether the remaining space of your memory card is greater than%1$dMB, the program will go back to check if you need to import the next boot.</string>
    <string name="import_backup_progress_dialog_message">Importing Notepad data</string>
    <string name="import_backup_progress_dialog_title">Import</string>
    <string name="inscribed_signature">Inscribed signature</string>
    <string name="label_custom_action_bar_title">Custom label</string>
    <string name="label_custom_delete_attention">It will not delete notes while the label is deleted, are you sure to delete the label?</string>
    <string name="label_custom_edit_text_hint">Input label</string>
    <string name="label_custom_exist">Label exists, input again</string>
    <string name="label_selector_dialog_custom_label_text">Label</string>
    <string name="local_file_verify_failed">local file verify failed</string>
    <string name="low_memory">low memory</string>
    <string name="max_content_input_mum_limit">Maximum input content limit has been reached.</string>
    <string name="max_pic_input_mum_limit">Maximum Numbers of picture limit has been reached.</string>
    <string name="network_error">network error</string>
    <string name="no_sdcard">no sdcard</string>
    <string name="no_space">no space</string>
    <string name="no_version">The current version is latest</string>
    <string name="note_action_del_message">Sure to delete notes that is selected?</string>
    <string name="note_action_del_string">Delete</string>
    <string name="note_action_edit_string">Edit</string>
    <string name="note_action_share_string">Share</string>
    <string name="note_main_activity_action_mode_title_layout_select_text">Selection All</string>
    <string name="note_main_activity_action_mode_title_layout_title_text">Selection 2 item</string>
    <string name="note_main_activity_title_layout_title_text">Note</string>
    <string name="note_no_exist">Not exist</string>
    <string name="note_no_exit">Notepad does not exist</string>
    <string name="note_tip_loadFinish">No content</string>
    <string name="note_tip_loading">Loading</string>
    <string name="note_tip_search">Under query</string>
    <string name="note_tip_searchFinish">No match for content</string>
    <string name="recommend_search_hint_text">Input key words</string>
</resources>