<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.gionee.note.ai.AISearchView android:id="@+id/recommend_search_panel" android:background="@color/recommend_search_panel_bg_color" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="8.0dip">
        <ImageView android:id="@+id/recommend_search_btn" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" style="@style/RippleEffect" />
        <amigoui.widget.AmigoEditText android:textSize="16.0sp" android:textColor="#80000000" android:textColorHint="#50000000" android:id="@+id/recommend_search_edit" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/recommend_search_hint_text" android:singleLine="true" android:layout_toLeftOf="@+id/recommend_search_btn" android:imeOptions="actionSearch" android:textCursorDrawable="@drawable/edit_cursor_dw" />
    </com.gionee.note.ai.AISearchView>
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_below="@+id/recommend_search_panel">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:id="@+id/ami_recommend_panel" android:background="@color/recommend_panel_bg_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="12.0sp" android:textColor="#ffff9000" android:gravity="center_vertical" android:id="@+id/ami_recommend_title" android:paddingLeft="13.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/ami_recommend_panel_title" />
                <View android:id="@+id/ami_recommend_line" android:background="@color/recommend_panel_line_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@+id/ami_recommend_title" />
                <android.support.v7.widget.GridLayout android:id="@+id/ami_recommend_grid_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:layout_marginRight="9.0dip" android:layout_below="@+id/ami_recommend_line" app:columnCount="2" />
            </RelativeLayout>
            <RelativeLayout android:id="@+id/favor_recommend_panel" android:background="@color/recommend_panel_bg_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                <TextView android:textSize="12.0sp" android:textColor="#ffff9000" android:gravity="center_vertical" android:id="@+id/favor_recommend_title" android:paddingLeft="13.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/favor_recommend_panel_title" />
                <View android:id="@+id/favor_recommend_line" android:background="@color/recommend_panel_line_color" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@+id/favor_recommend_title" />
                <android.support.v7.widget.GridLayout android:id="@+id/favor_recommend_grid_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:layout_marginRight="9.0dip" android:layout_below="@+id/favor_recommend_line" app:columnCount="2" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>